bugfix/overflow

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -8,7 +8,6 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
   transition: all 1s ease;
   background: rgb(255, 255, 255);
   z-index: 3;
